# 2

./: __init__.py  flask_blog.db  main.py  menu.html  pizzas.db  pyproject.toml
app/: __init__.py
app/data/: password.py  wheather.py
app/db/: __init__.py  base.py
app/db/models/: dish.py  position.py  post.py  user.py
app/routers/: pizza.py
app/routes/: dish.py  main.py  position.py  post.py  user.py
app/templates/: _add_post.html  add_dish.html  add_pizza.html  poll.html  poll_results.html  show_menu.html
routers/: pizza.py
static/: style.css
template/: _navigation.html  base.html  index.html  menu.html
templates/: _macros.html  _navigation.html  base.html
